--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+@layer components{
+    .clip_path{
+        clip-path: polygon(50% 0%, 100% 0, 100% 83%, 50% 100%, 0 84%, 0 41%, 0 0);
+    }
+    .heading{
+        @apply text-[30px] md:text-[35px] lg:text-[45px] xl:text-[50px] uppercase font-bold text-gray-900 md:leading-[4rem] leading-[3rem] text-center
+    }
+    .heading span{
+        @apply text-red-600;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1)
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+input[type="time"]::-webkit-calendar-picker-indicator {
+    filter: invert(1)
+}
+input[type="time"]::-webkit-calendar-picker-indicator::after {
+    filter: invert(1)
 }
